--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <appointmentsVersion>1.2.1</appointmentsVersion>
     <atomfeedVersion>2.5.6</atomfeedVersion>
     <forkedAuditLogVersion>1.1-1.0.0</forkedAuditLogVersion>
-    <forkedBahmnicoreVersion>0.93-1.0.0</forkedBahmnicoreVersion>
+    <forkedBahmnicoreVersion>0.93-1.1.0-SNAPSHOT</forkedBahmnicoreVersion>
     <forkedBahmniieomodVersion>1.1.0-629dc24</forkedBahmniieomodVersion>
     <bedmanagementVersion>5.11.0</bedmanagementVersion>
     <forkedEpisodesVersion>1.0-1.0.0</forkedEpisodesVersion>
@@ -60,7 +60,7 @@
     <eventVersion>2.8.0</eventVersion>
     <htmlwidgetsVersion>1.8.0</htmlwidgetsVersion>
     <idgenVersion>4.6.0</idgenVersion>
-    <initializerVersion>2.1.0</initializerVersion>
+    <initializerVersion>2.2.0-SNAPSHOT</initializerVersion>
     <legacyuiVersion>1.3.3</legacyuiVersion>
     <metadatamappingVersion>1.3.1</metadatamappingVersion>
     <metadatasharingVersion>1.2.2</metadatasharingVersion>
