--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
     <eventVersion>2.8.0</eventVersion>
     <htmlwidgetsVersion>1.8.0</htmlwidgetsVersion>
     <idgenVersion>4.6.0</idgenVersion>
-    <initializerVersion>2.2.0</initializerVersion>
+    <initializerVersion>2.3.0-SNAPSHOT</initializerVersion>
     <legacyuiVersion>1.3.3</legacyuiVersion>
     <metadatamappingVersion>1.3.1</metadatamappingVersion>
     <metadatasharingVersion>1.2.2</metadatasharingVersion>
