--- a/pom.xml
+++ b/pom.xml
@@ -40,12 +40,11 @@
 
     <!-- Bahmni modules -->
 
-    <appointmentsVersion>1.2.1</appointmentsVersion>
+    <appointmentsVersion>1.3.0</appointmentsVersion>
     <atomfeedVersion>2.5.6</atomfeedVersion>
     <forkedAuditLogVersion>1.1-1.0.0</forkedAuditLogVersion>
     <forkedBahmnicoreVersion>0.93-1.1.0</forkedBahmnicoreVersion>
     <forkedBahmniieomodVersion>1.1.0-629dc24</forkedBahmniieomodVersion>
-    <postbahmniVersion>1.2.0-GHC</postbahmniVersion>
     <bedmanagementVersion>5.11.0</bedmanagementVersion>
     <forkedEpisodesVersion>1.0-1.0.0</forkedEpisodesVersion>
     <forkedIdgenwebservicesVersion>1.3-1.0.0</forkedIdgenwebservicesVersion>
@@ -53,14 +52,14 @@
 
     <!-- OpenMRS modules -->
     <addresshierarchyVersion>2.12.0</addresshierarchyVersion>
-    <appframeworkVersion>2.10.0</appframeworkVersion>
+    <appframeworkVersion>2.16.0</appframeworkVersion>
     <bacteriologyVersion>1.2.0</bacteriologyVersion>
-    <calculationVersion>1.2</calculationVersion>
+    <calculationVersion>1.3.0</calculationVersion>
     <emrapiVersion>1.24.8</emrapiVersion>
     <eventVersion>2.8.0</eventVersion>
     <htmlwidgetsVersion>1.8.0</htmlwidgetsVersion>
     <idgenVersion>4.6.0</idgenVersion>
-    <initializerVersion>2.3.0-SNAPSHOT</initializerVersion>
+    <initializerVersion>2.3.0</initializerVersion>
     <legacyuiVersion>1.3.3</legacyuiVersion>
     <metadatamappingVersion>1.3.1</metadatamappingVersion>
     <metadatasharingVersion>1.2.2</metadatasharingVersion>
@@ -69,9 +68,9 @@
     <providermanagementVersion>2.5.0</providermanagementVersion>
     <reportingVersion>1.16.0</reportingVersion>
     <reportingrestVersion>1.10.0</reportingrestVersion>
-    <serializationVersion>0.2.12</serializationVersion>
+    <serializationVersion>0.2.15</serializationVersion>
     <uicommonsVersion>2.3.0</uicommonsVersion>
-    <uiframeworkVersion>3.8</uiframeworkVersion>
+    <uiframeworkVersion>3.22.1</uiframeworkVersion>
     <uilibraryVersion>2.0.5</uilibraryVersion>
     <webservices.restVersion>2.29.0</webservices.restVersion>
 
@@ -264,11 +263,6 @@
       <groupId>org.openmrs.module</groupId>
       <artifactId>initializer-omod</artifactId>
       <version>${initializerVersion}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.openmrs.module</groupId>
-      <artifactId>postbahmni-omod</artifactId>
-      <version>${postbahmniVersion}</version>
     </dependency>
   </dependencies>
 
