GHC-127: Fix urls to use 'https'

--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   </developers>
   <organization>
     <name>Mekom Solutions</name>
-    <url>http://mekomsolutions.com</url>
+    <url>https://mekomsolutions.com</url>
   </organization>
 
   <properties>
@@ -435,17 +435,17 @@
     <repository>
       <id>openmrs-repo</id>
       <name>OpenMRS Nexus Repository</name>
-      <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
+      <url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
     </repository>
     <repository>
       <id>repo.mybahmni.org</id>
       <name>bahmni-artifactory-snapshots</name>
-      <url>http://repo.mybahmni.org.s3.amazonaws.com/artifactory/snapshot</url>
+      <url>https://repo.mybahmni.org.s3.amazonaws.com/artifactory/snapshot</url>
     </repository>
     <repository>
       <id>repo.mybahmni.org-release</id>
       <name>bahmni-artifactory-release</name>
-      <url>http://repo.mybahmni.org.s3.amazonaws.com/artifactory/release</url>
+      <url>https://repo.mybahmni.org.s3.amazonaws.com/artifactory/release</url>
     </repository>
     <repository>
       <id>sonatype-nexus-snapshots</id>
@@ -465,7 +465,7 @@
     <pluginRepository>
       <id>openmrs-repo</id>
       <name>OpenMRS Nexus Repository</name>
-      <url>http://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
+      <url>https://mavenrepo.openmrs.org/nexus/content/repositories/public</url>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
