--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
     <AuditLogVersion>1.1-20180605.115330-1</AuditLogVersion>
     <forkedBahmnicoreVersion>0.93-1.1.0</forkedBahmnicoreVersion>
     <ReferenceDataVersion>0.93-20210923.061737-70</ReferenceDataVersion>
-    <BahmniieomodVersion>1.1.0-20200419.130618-4</BahmniieomodVersion>
+    <BahmniieomodVersion>1.1.0</BahmniieomodVersion>
     <bedmanagementVersion>5.11.0</bedmanagementVersion>
     <EpisodesVersion>1.0-20161205.083536-1</EpisodesVersion> 
     <IdgenwebservicesVersion>1.3-20221214.114537-2</IdgenwebservicesVersion>
